--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-reqwest = "0.12.24"
+reqwest = { version = "0.12.24", features = ["json"] }
 serde = "1.0.228"
 serde_json = "1.0.145"
 thiserror = "2.0.17"
