--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ serde = "1.0.228"
 serde_json = "1.0.145"
 thiserror = "2.0.17"
 time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
+
+[dev-dependencies]
+tokio-test = "0.4.4"
+tokio = { version = "1.48.0", features = ["macros", "full"] }
