--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "cyclone-mod"
 version = "0.1.0"
 edition = "2024"
+description = "A NexusMods API wrapper"
+license = "GPL-3.0"
 
 [dependencies]
 reqwest = { version = "0.12.24", features = ["json"] }
